--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -190,7 +190,7 @@ textview .time {
 }
 
 .popup {
-    background-color: #268bd2; /*solarized-cyan*/
+    background-color: #002b36; /*solarized-cyan*/
 }
 
 .dialog {
@@ -239,7 +239,7 @@ textview .time {
 }
 
 .message_popup_warning, .message_popup_warning button {
-    background-color: #b58900; /*solarazed-yellow*/
+    background-color: #fac115; /*solarazed-yellow*/
 }
 
 .message_popup_error, .message_popup_error button {
