--- a/styles/base.css
+++ b/styles/base.css
@@ -555,17 +555,33 @@ popover button {
 /* Hardcoded values until creation of dynamic CSS updates */
 .graph_label_hidden {padding-left: .9em;} /* .4em on top of normal button padding */
 .graph_label_extruder {border-left-width: .4em; border-left-style: solid;}
+.graph_label_extruder_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_extruder1 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_extruder1_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_extruder2 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_extruder2_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_extruder3 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_extruder3_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_extruder4 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_extruder4_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_heater_bed {border-left-width: .4em; border-left-style: solid;}
+.graph_label_heater_bed_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_fan_1 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_fan_1_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_fan_2 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_fan_2_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_fan_3 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_fan_3_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_fan_4 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_fan_4_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_sensor_1 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_sensor_1_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_sensor_2 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_sensor_2_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_sensor_3 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_sensor_3_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_sensor_4 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_sensor_4_temp {border-right-width: .4em; border-right-style: solid;}
 .graph_label_sensor_5 {border-left-width: .4em; border-left-style: solid;}
+.graph_label_sensor_5_temp {border-right-width: .4em; border-right-style: solid;}
+
