--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -301,9 +301,16 @@ trough {
 trough highlight, trough progress {
     background-color: #6c71c4; /*solarized-violet*/
     color: #fdf6e3; /*base3*/
-    border-color: #002b36; /*base03*/
+    border-color: #404E57; /*base03*/
+    border-width: .1em;
     border-top-left-radius: 1em;
     border-bottom-left-radius: 1em;
+    border-top-right-radius: 1em;
+    border-bottom-right-radius: 1em;
+}
+
+trough.empty {
+    background-color: #404E57;
 }
 
 scale-mark {
