--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -122,6 +122,20 @@ button.color5:active {
     border-style: none;
     box-shadow: none;
 }
+
+button.stop_pid {
+  background-color: inherit; 
+  /* box-shadow: 0px 0px 10px 5px rgba(10, 145, 178, 0.2), 0px 01px 10px 5px rgba(10, 145, 178, 0.2) inset; */
+  border-width: .15em;
+  border-style: solid;
+  border-radius: 1em;
+  border-color: #B22222;
+}
+
+button.stop_pid:active {
+  background-color: #B22222;
+}
+
 button.color3 {
     background-color: inherit; /*base02*/
     box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
