--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -112,7 +112,6 @@ button.color2 {
 button.color5 {
     background-color: inherit; 
     box-shadow: 0px 0px 10px 5px rgba(10, 145, 178, 0.2), 0px 01px 10px 5px rgba(10, 145, 178, 0.2) inset;
-    /* box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset; */
     border-width: .3em;
     border-style: solid;
     border-radius: 1em;
@@ -125,7 +124,6 @@ button.color5:active {
 
 button.stop_pid {
   background-color: inherit; 
-  /* box-shadow: 0px 0px 10px 5px rgba(10, 145, 178, 0.2), 0px 01px 10px 5px rgba(10, 145, 178, 0.2) inset; */
   border-width: .15em;
   border-style: solid;
   border-radius: 1em;
@@ -471,4 +469,28 @@ textview .time {
     min-height: 4.5em;
     padding: .2em .3em;
     border-bottom: 1px solid rgba(253, 246, 227, 0.4);
+}
+
+.details_prog_label {
+  font-size: 1.3em;
+  font-weight: 600;
+  font-family: sans-serif;
+  letter-spacing: 1.1px;
+  margin-top: 16px;
+}
+
+.text_error {
+  color: #ab2121;
+}
+
+.text_warning {
+  color: #e68a00;
+}
+
+.ml-1rem {
+  margin-left: 1rem;
+}
+
+.pb-06rem {
+  padding-bottom: 0.6rem;
 }
