--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -109,6 +109,30 @@ button.color2 {
     border-radius: 1em;
 }
 
+button.color3 {
+  background-color: inherit; /*base02*/
+  box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
+  border-bottom-color: #2aa198; /*solarized-cyan*/
+  border-radius: 1em;
+}
+
+button.color4  {
+  background-color: inherit; /*base02*/
+  box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
+  border-bottom-color: #859900; /*solarized-green*/
+  border-radius: 1em;
+}
+
+box.color4 {
+  padding: .2em .5em 0;
+  margin: .3em;
+  min-height: 3em;
+  background-color: inherit; /*base02*/
+  box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
+  border-bottom: .4em solid #859900;
+  border-radius: 1em;
+}
+
 button.color5 {
     background-color: inherit; 
     box-shadow: 0px 0px 10px 5px rgba(10, 145, 178, 0.2), 0px 01px 10px 5px rgba(10, 145, 178, 0.2) inset;
@@ -134,20 +158,6 @@ button.stop_pid:active {
   background-color: #B22222;
 }
 
-button.color3 {
-    background-color: inherit; /*base02*/
-    box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
-    border-bottom-color: #2aa198; /*solarized-cyan*/
-    border-radius: 1em;
-}
-
-button.color4 {
-    background-color: inherit; /*base02*/
-    box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
-    border-bottom-color: #859900; /*solarized-green*/
-    border-radius: 1em;
-}
-
 button.round_button {
   background-color: inherit;
   box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
@@ -162,10 +172,9 @@ button.extruder {
     border-radius: 1em;
 }
 
-
-button.color1:active, button.color2:active, button.color3:active, button.color4:active, button.update:active, button.invalid:active, button.round_button:active {
+button.color1:active, button.color2:active, button.color3:active, button.color4:active, button.update:active, button.invalid:active, box.color4:active {
     border-style: none;
-    margin-top: .5em;
+    /* margin-top: .5em; */
 }
 
 button.active{
