--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -86,6 +86,10 @@ button {
   border-radius: 0px;
 }
 
+.hide_button:active {
+  background-color: inherit;
+}
+
 .keyboard {
     padding-right: 20px;
     padding-bottom: 10px;
@@ -360,30 +364,43 @@ trough.empty {
     background-color: #404E57;
 }
 
-/* Почистить ненужные свойства */
+.media trough slider {
+  min-height: 0em;
+  min-width: 0em;
+}
+
 .media trough {
-  min-height: 0.1em;
+  min-height: 0em;
   background-color: #404E57;
-  border: 1px solid #002b36;
-  border-radius: 0.1em;
-  padding: 0;
-  margin: 0;
+} 
+/* Почистить ненужные свойства */
+.media trough highlight{
+  border-color: #404E57;/* #6c71c4;*/
+  border-width: 0.5em;
+  min-height: 0em;
+  min-width: 0em;
 }
-
-.media trough highlight, .media trough progress {
-  min-height: 1em;
-  padding: 0;
-  margin: 0;
-  background-color: #474dc7;
-  border-color: #002b36;
-  border-width: 0;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+.media trough progress {
+  border-color: #404E57;
+  border-radius: 1em;
+  border-width: 0.5em;
+  /* min-width: 0em; */
+  /* background-size: 2px 2px; */
+  /* background-color: #6c71c4; */
+  /* border-radius: 1em;
+  border-width: 1em;  */
 }
+.media:disabled trough slider {
+  background-image: -gtk-scaled(url(""));  
+  background-color: gray;
+  /* background-size: 1px; */
+}
+/* .media trough highlight, .media trough progress {
+  background-color: #6c71c4;
+  border-width: 1em;
+} */
 
-scale.media {
+/* scale.media {
   margin: 0;
   padding: 0;
 }
@@ -395,7 +412,7 @@ scale.media trough slider {
   min-width: 0.1em;
   padding: 0;
   margin: 0;
-}
+} */
 
 scale-mark {
     color: #fdf6e3;
@@ -574,3 +591,45 @@ textview .time {
 .placeholder * {
   color: grey;
 }
+
+.d_button {
+  box-shadow: 0px 0px 10px 6px rgba(34, 60, 80, 0.5) inset;
+  border-radius: 2em;
+}
+
+.d_button:disabled label {
+  color: #fdf6e3;
+}
+
+.d_button_active {
+  background: #859900;
+}
+
+checkbutton check {
+  min-width: 16px;
+  min-height: 16px;
+  /* background: green; */
+}
+
+checkbutton:disabled check {
+  background: gray;
+}
+
+.endstop_cur_state {
+  background-color: #859900;
+}
+/* .d_button_active {
+  background: linear-gradient(90deg,#e68a00, #ffbf66, #e68a00);
+  background-size: 200% 100%;
+  animation: gradient 5s ease-out infinite;
+}
+
+@keyframes gradient {
+	0% { background-position: 100% 0%; }
+  50% { background-position: 0% 0%; }
+  100% { background-position: -100% 0%; }
+}
+
+.d_button_error {
+  background: #ab2121;
+} */
