--- a/styles/gelios/style.css
+++ b/styles/gelios/style.css
@@ -18,6 +18,16 @@ window {
   font-family: Roboto, sans-serif;
   letter-spacing: 1.5px;
 }
+
+.bed-level-chars label {
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.numpad_chars label {
+  font-size: 16px;
+  font-weight: 500;
+}
 .content > * > * {
     padding-right: 8px;
 }
@@ -134,6 +144,22 @@ button.color3 {
   border-radius: 1em;
 }
 
+button.active-disabled {
+  background-color: inherit; /*base02*/
+  box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
+  border-bottom-color: #2aa198; /*solarized-cyan*/
+  border-radius: 1em;
+}
+
+button.active-disabled:disabled {
+  background-color: #cb4b16;
+  box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
+  border-radius: 1em;
+}
+
+button.active-disabled:disabled label {
+  color: #fdf6e3;
+}
 button.color4  {
   background-color: inherit; /*base02*/
   box-shadow: -8px 11px 10px 2px rgba(34, 60, 80, 0.2) inset;
@@ -190,9 +216,23 @@ button.extruder {
     border-radius: 1em;
 }
 
+button.color3:hover {
+  border-color: #2aa198;
+}
 button.color1:active, button.color2:active, button.color3:active, button.color4:active, button.update:active, button.invalid:active, box.color4:active {
-    border-style: none;
+    border-color: #002b36;
+    /* background-color: #cb4b16; */
+    /* padding-bottom: .4em; */
+    /* transform: none; */
     /* margin-top: .5em; */
+}
+
+button:disabled,
+button.color1:disabled,
+button.color2:disabled,
+button.color3:disabled,
+button.color4:disabled {
+    border: #002b36;
 }
 
 button.active{
@@ -329,7 +369,6 @@ notebook > header > tabs > tab:checked {
 
 label {
     color: #fdf6e3; /*base3*/
-    
 }
 
 menu {
