--- a/styles/base.css
+++ b/styles/base.css
@@ -404,7 +404,7 @@ trough {
     border: .1em solid white;
     border-radius: 1em;
     padding: 1em;
-    margin: 0;
+    /* margin: 0; */
 }
 
 .message_popup button{
